# library-project

./: docker-compose.yml
services/api/: .flake8  Dockerfile  Makefile  README.md  pyproject.toml  start-dev.sh
services/api/api/: asgi.py  settings.py  urls.py  wsgi.py
services/api/core/: models.py  serializers.py  services.py  urls.py  views.py
services/api/core/migrations/: 0001_initial.py  0002_allocation_delete_alocation_book_author_and_more.py  0003_book_isbestseller_alter_book_rating.py  0004_alter_allocation_deleted_at_alter_book_deleted_at_and_more.py
