[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | migrations
)
'''

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorator = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 95
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
generate-badge = "."
badge-format = "svg"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mdr.settings"
python_files = "test_*.py"
testpaths = [
  "core/tests/",
]
filterwarnings = [
  "ignore::django.utils.deprecation.RemovedInDjango50Warning",
  "ignore::DeprecationWarning",
]

[tool.poetry]
name = "library-api"
version = "0.1.0"
description = ""
authors = ["Yuri Ribeiro Felipe <yurirflp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2"
djangorestframework = "^3.14"
django-extensions = "^3.2"
dj-database-url = "0.5.0"
django-cors-headers = "3.5.0"
djangorestframework-simplejwt = "~5.2"
werkzeug = "^2.3"
python-decouple = "3.4"
Unipath = "1.1"
"psycopg2-binary" = "2.8.6"
gunicorn = "20.1.0"
django-filter = "2.4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "3.9.0"
model-bakery = "^1.12"
ipython = "7.12.0"
isort = "5.6.3"
interrogate = "1.4.0"
black = "22.8.0"
pytest = "6.0.2"
click = "8.0.4"
pytest-django = "3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
